--- a/client/src/Styles/header.css
+++ b/client/src/Styles/header.css
@@ -9,8 +9,6 @@ body {
 
 .header-div h1 {
   color: white;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 48px;
   margin: 0;
-  padding: 16px 32px;
+  padding: 32px;
 }
